Set up "products" dropdown; need to fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ li{
     padding: 1rem;
 }
 
-.navbar{
+.heading{
     display: flex;
   align-items: center;
   margin: 0 0 5rem 0;
@@ -28,12 +28,8 @@ li{
 .sign-in{
     display: flex;
     gap: 1.3rem;
-}
-
-.navbar ul, .sign-in{
     cursor: pointer;
 }
-
 
 
 .btn{
@@ -77,3 +73,73 @@ img{
     align-items: center;
     padding: 1rem;
 }
+
+
+  .navbar {
+    overflow: hidden;
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: gray;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 1rem;  
+    border: none;
+    outline: none;
+    color: gray;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+ 
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    max-width: 25rem;
+    border-radius: 25px;
+    padding: 1rem;
+    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: flex;
+    text-align: left;
+    border-radius: 25px;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+
+  .drop-name{
+    color: rgb(3, 3, 47);
+  }
+  
+  .show {
+    display: block;
+  }
+
+  .reviews-logos{
+    display: flex;
+    gap: .8rem;
+    margin-left: .8rem;
+  }
